@@ -624,6 +624,7 @@ static void ImGui_ImplDX10_CreateWindow(ImGuiViewport* viewport)
 
     IM_ASSERT(vd->SwapChain == NULL && vd->RTView == NULL);
     bd->pFactory->CreateSwapChain(bd->pd3dDevice, &sd, &vd->SwapChain);
+    bd->pFactory->MakeWindowAssociation(hwnd, DXGI_MWA_NO_ALT_ENTER | DXGI_MWA_NO_PRINT_SCREEN | DXGI_MWA_NO_WINDOW_CHANGES);
 
     // Create the render target
     if (vd->SwapChain)
